@@ -27,10 +27,21 @@ for _, effect in ipairs(effects) do
   end
 end
 
+local function get_empty_effects()
+  return {
+    speed = 0,
+    productivity = 0,
+    consumption = 0,
+    pollution = 0,
+    quality = 0,
+  }
+end
+
 return {
   effects = effects,
   min_strength = -32768,
   max_strength =  32767,
   module_number_to_strength = module_number_to_strength,
   module_name_to_effect_and_strength = module_name_to_effect_and_strength,
+  get_empty_effects = get_empty_effects,
 }
